Creado mediante Colaboratory

--- a/1raPrueba.ipynb
+++ b/1raPrueba.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "1raPrueba.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPwbCUusZvBeFBOa9COZgLW",
+      "authorship_tag": "ABX9TyMK4o+J7MsCPB5ObJtD/UEw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,26 @@
       "metadata": {
         "id": "j52FDlEqf6NF",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "6ab2ec7c-f97f-48a4-98a3-a187eb04d1ac"
       },
       "source": [
-        "# My fierts line: Hello 1raPueba."
+        "# My fierts line: Hello 1raPueba.\n",
+        "print ('hello world')"
       ],
-      "execution_count": 1,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
